change workspace setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+    "editor.fontSize": 18,
+    "workbench.colorTheme": "Visual Studio Dark",
+    "workbench.activityBar.visible": false,
+    
 }
