Complete large hero block and intro content block.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
     "editor.fontSize": 18,
     "workbench.colorTheme": "Visual Studio Dark",
-    "workbench.activityBar.visible": false,
+    "workbench.activityBar.visible": false
     
 }
